--- a/src/CodigosHtml/front/vue3/CrearProyecto.html
+++ b/src/CodigosHtml/front/vue3/CrearProyecto.html
@@ -1,31 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <style>body{background-color:bisque;}</style>
-  <title>ELEMENTOS RÁPIDOS</title>
-</head>
-<body>
-
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <style>
+      body {
+        background-color: bisque;
+      }
+    </style>
+    <title>ELEMENTOS RÁPIDOS</title>
+  </head>
+  <body>
     <div>
-      <h1>VUE-VITE</h1>
+      <h1>VUE</h1>
       <ol>
+        <h3>Para todos</h3>
         <li>Tener instalado node</li>
-        <li>Proceso</li>
-        <li>npm init vue@latest</li>
-        <li>cd carpeta		</li>
-        <li>npm install</li>
-        <li>add vuetify</li>
-        <li>npm run dev	</li>
-        <li>Proyecto terminado</li>
+        <li>Crear carpeta y llevarla a VSCode</li>
+
+        <h2>VITE</h2>
+        <h3>Proceso</h3>
+        <li>npm create vite@latest</li>
+        <li>Pedirá el NombreDelProyecto</li>
+        <li>Pedirá iniciar con crear vite</li>
+        <li>Seleccionar el framework</li>
+        <li>Js o ts</li>
+        <li>Cd nombreDelProyecto</li>
+        <li>Npm install</li>
+        <li>Npm run dev</li>
       </ol>
       <h2>VUE-CLI</h2>
       <ol>
         <li>tener instalado node</li>
         <li>Tener instalado el CLI de Vue asi:</li>
-        <li>npm install -g @vue/cli </li>
-        <li>Proceso</li>
+        <li>npm install -g @vue/cli</li>
+        <h3 >Proceso</h3>
         <li>vue create nombreDelProyecto</li>
         <li>elegir manual o vue3</li>
         <li>npm add vuetify</li>
@@ -35,7 +44,15 @@
         <li>npm install --save bootstrap</li>
         <li>npm install --save @popperjs/core</li>
       </ol>
+      <h2> VUETIFY</h2>
+      <ol>
+        <li>	npm install vuetify		</li>
+        <li>	npm install vite-plugin-vuetify		</li>
+        <li>			</li>
+        
+      </ol>
     </div>
-    <img src="/src/assets/image/front/vue3/instalar.png" alt="instalar">
-</body>
+    <img src="/src/assets/image/front/vue3/viteConfig.png" alt="viteConfig" />
+    <img src="/src/assets/image/front/vue3/viteConfig1.png" alt="viteConfig1" />
+  </body>
 </html>
