--- a/src/CodigosHtml/front/vue3/CrearProyecto.html
+++ b/src/CodigosHtml/front/vue3/CrearProyecto.html
@@ -16,10 +16,14 @@
       <ol>
         <h3>Para todos</h3>
         <li>Tener instalado node</li>
+        <li><a href="https://nodejs.org/en/download">Download</a></li>
+        <li>   cada cierto tiempo se debería actualizar el node hoy 180425</li>
+        <li>Verificar la versión de Node.js <br> node -v <br> node --version </li>
         <li>Crear carpeta y llevarla a VSCode</li>
 
         <h2>VITE</h2>
         <h3>Proceso</h3>
+        <li><a href="https://vite.dev/guide/">Vite Guía</a></li>
         <li>npm create vite@latest</li>
         <li>Pedirá el NombreDelProyecto</li>
         <li>Pedirá iniciar con crear vite</li>
