--- a/block.html
+++ b/block.html
@@ -1,6 +1,8 @@
 &lt;template> &lt;div class="bg-teal-lighten-2 text-white text-center py-5">
-&lt;h1>ProbatioVue&lt;/h1> &lt;h2>{{ mensaje }}&lt;/h2> &lt;/div> &lt;/template>
-&lt;!-- +++++++++++++++++++++++++++++++++++++ --> &lt;script setup> let num1 =
-10; let num2 = 20; let mensaje = `El resultado de la suma ${num1} + ${num2} es:
-${num1 + num2}`; &lt;/script> &lt;!-- +++++++++++++++++++++++++++++++++++++ -->
-&lt;style scoped>&lt;/style> NOTA : LAS COMILLAS INVERTIDAS SE HACEN CON ALT+96
+&lt;h1>ProbatioVue&lt;/h1> &lt;h2 v-show="color === true" class="text-red">EL
+color es rojo&lt;/h2> &lt;h2 v-show="color === false" class="text-purple">EL
+color es purpura&lt;/h2> &lt;v-btn @click="color = !color"
+class="bg-purple">Color&lt;/v-btn> &lt;/div> &lt;/template> &lt;!--
++++++++++++++++++++++++++++++++++++++ --> &lt;script setup> import { ref } from
+'vue'; let color = ref(true) &lt;/script> &lt;!--
++++++++++++++++++++++++++++++++++++++ --> &lt;style scoped>&lt;/style>
