--- a/src/CodigosHtml/home/Recordaris.html
+++ b/src/CodigosHtml/home/Recordaris.html
@@ -71,6 +71,7 @@
         <li>CLAVE PC ASUS</li>
         <li>Usuario:</li>
         <li>Password: 2607</li>
+        <li>Password: 1208</li>
         <li></li>
         <li></li>
         <li>SUMINISTRO DE LUZ</li>
@@ -90,7 +91,6 @@
         <li>MINEDU</li>
         <li>usuario 15367782</li>
         <li>pass: CarlosSofia2607</li>
-        <li>MPD2024-EXT-0546002 (certificados de estudios)</li>
         <li></li>
         <li>GIT</li>
         <li>user: nitram26</li>
