--- a/src/CodigosHtml/front/js/funciones.html
+++ b/src/CodigosHtml/front/js/funciones.html
@@ -69,34 +69,14 @@
 
         </details>
       </li>
-      <li>  <details class="select">
-        <summary>FUNCTIONS Ejercicios</summary>
-        <ol>
-          <li class="int">Crea una función que reciba dos números y retorne su suma</li>
-          <li class="int">Crea una función que reciba un número y retorne si es par o impar</li>
-          <li class="int">Crea una función que reciba un texto y retorne su longitud</li>
-          <li class="int">Crea una función que reciba un texto y retorne el texto en mayúsculas y minúsculas</li>
-       
-          <li class="int">Crea una función que reciba un número y retorne si es positivo, negativo o cero</li>
-          <li class="int">Crea una función que reciba dos números y retorne el mayor de los dos</li>
-          <li class="int">Crea una función que reciba un arreglo de números y retorne la suma de todos sus elementos</li>
-          <li class="int">Crea una función que reciba un arreglo de números y retorne el promedio de sus elementos</li>
-          <li class="int" >Calcular el precio final de un artículo, conociendo el precio inicial y el porcentaje de descuento es de 15%</li>
-          <li class="int" >Diseña el programa que dado el precio de venta de un artículo calcule su precio antes de impuestos (IGV 19%)</li>
-          <li class="int" >Calcula la longitud de la circunferencia y el área del círculo dado el radio</li>
-          <li class="int" >Calcula cuántos dígitos tiene un número</li>
-          <li class="int" >Escribe una función que reciba un array de números y retorne el número más grande</li>
-          <li class="int" >Escribe una función llamada <b>númeroAleatorio</b> que reciba 2 números como parámetro y retorne un número al azar comprendido entre ambos</li>
-          <li class="int" >Escribe una función llamada <b>factorial</b> que reciba un número y retorne su factorial</li>
-          <li class="int" >Crea una función que cuente cuántas vocales hay en una cadena de texto</li>
-
-          <li class="int" >Escribe una función llamada <b>contarPalabras</b> que reciba una frase y retorne cuántas palabras tiene</li>
-          <li class="int" >Escribe una función llamada <b>ordenarArreglo</b> que reciba un arreglo de números y lo ordene de menor a mayor</li>
-          <li class="int" >Escribe una función llamada <b>eliminarDuplicados</b> que reciba un arreglo y retorne otro sin elementos repetidos</li>
-          <li class="int" >Escribe una función que determine si un número es primo</li>
-      </ol>
-      
-      </details></li>
+      <li class="li">
+        <details class="select">
+          <summary></summary>
+          <p><br /><br /></p>
+        </details>
+      </li>
+      <!-- ++++++++++++++++++++++++++++++ -->
+ 
     </ol>
     <section id="2">
       <h2 class="subtitulo">Ejercicios Funciones</h2>
