--- a/src/CodigosHtml/front/js/arrays.html
+++ b/src/CodigosHtml/front/js/arrays.html
@@ -38,7 +38,7 @@
     <section id="1">
       <h2 class="subtitulo">Arrays</h2>
       <!-- /////////////////////////////////////// -->
-      <p>Es un tipo de dato complejo</p>
+      <p>Teoría y Ejercicios</p>
       <h4>Ejercicios</h4>
       <ol>
         <li class="li">
@@ -216,6 +216,64 @@
 
               <br />
             </p>
+          </details>
+        </li>
+        <!-- ++++++++++++++++++++++++++++++ -->
+        <li class="li">
+          <details class="select">
+            <summary>Ejercicios con Métodos de Arrays (10)</summary>
+
+            <div v-html>
+              1. Método push()
+              <br />
+              Agrega un nuevo producto a un array de compras. Usa push() para
+              añadir “pan” al final del array.
+              <br />
+              2. Método pop()
+              <br />
+              Elimina el último elemento de un array de tareas pendientes y
+              guarda ese valor en una variable.
+              <br />
+              3. Método shift()
+              <br />
+              Quita el primer estudiante de una lista de asistencia. Muestra
+              quién fue eliminado.
+              <br />
+              4. Método unshift()
+              <br />
+              Agrega “Matemáticas” al inicio de un array de materias escolares.
+              <br />
+              5. Método filter()
+              <br />
+              Dado un array de números, crea uno nuevo que contenga solo los
+              números mayores a 10.
+              <br />
+              6. Método map()
+              <br />
+              Transforma un array de precios en dólares multiplicándolos por 3.8
+              para obtener soles.
+              <br />
+              7. Método reduce()
+              <br />
+              Suma todos los valores de un array de calificaciones para obtener
+              el total. Usa reduce().
+              <br />
+              8. Método includes()
+              <br />
+              Verifica si el producto “leche” está incluido en el array de
+              compras.
+              <br />
+              9. Método sort()
+              <br />
+              Ordena un array de nombres de forma alfabética. Después,
+              imprímelo.
+              <br />
+              10. Método forEach()
+              <br />
+              Usa forEach() para recorrer un array de animales y mostrar “Este
+              animal es: [nombre]” por consola.
+              <br />
+            </div>
           </details>
         </li>
         <!-- ++++++++++++++++++++++++++++++ -->
