--- a/src/CodigosHtml/home/SubirGithub.html
+++ b/src/CodigosHtml/home/SubirGithub.html
@@ -12,6 +12,13 @@
         margin: 4em;
         border: brown double 6px;
       }
+      .text {
+        font-size: 1.2em;
+        margin: 2em;
+        padding: 1em;
+        border-radius: 10px;
+        line-height: 1.5;
+      }
     </style>
     <title>ELEMENTOS RÁPIDOS</title>
   </head>
@@ -35,5 +42,97 @@
     <div>
     </div>
   </pre>
+    <p class="text">
+      ¡ Cómo hacer deploy de tu proyecto con GitHub Pages
+      <br />
+      <br />
+      Paso a paso:
+      <br />
+      <br />
+      1.
+      <b>Ve a tu repositorio en GitHub</b>
+      :
+      <br />
+      <a href="https://github.com/nitram26/Note"></a>
+      <br />
+      <br />
+      2. Haz clic en la pestaña
+      <b>"Settings"</b>
+      (Configuración).
+      <br />
+      <br />
+      3. En el menú lateral izquierdo, baja hasta la sección
+      <b>"Pages"</b>
+      o
+      <b>"Pages" → "Deployments"</b>
+      .
+      <br />
+      <br />
+      4. En
+      <b>"Source"</b>
+      (fuente), selecciona:
+      <br />
+      <br />
+      *
+      <b>Branch:</b>
+      <code>master</code>
+      <br />
+      *
+      <b>Folder:</b>
+      <code>/ (root)</code>
+      <br />
+      <br />
+      Luego haz clic en
+      <b>Save</b>
+      .
+      <br />
+      <br />
+      5. GitHub mostrará un mensaje como este:
+      <br />
+      <br />
+      <code>
+        Your site is ready to be published at:
+        <br />
+        <a href=" https://nitram26.github.io/Note/">Proyecto</a>
+      </code>
+      <br />
+      <br />
+      Copia ese enlace: ¡ese será tu sitio web!
+      <br />
+      <br />
+      ---
+      <br />
+      <br />
+      Requisitos para que funcione:
+      <br />
+      <br />
+      * Tu archivo se debe llamar exactamente
+      <code>index.html</code>
+      (lo tienes ✅).
+      <br />
+      * Todos los archivos deben estar en la raíz del proyecto (no dentro de
+      carpetas como
+      <code>/src</code>
+      o
+      <code>/public</code>
+      ).
+      <br />
+      * Debe estar en la rama que elegiste como fuente (
+      <code>master</code>
+      en este caso).
+      <br />
+      <br />
+      ---
+      <br />
+      <br />
+      ¿Y si no aparece todavía?
+      <br />
+      <br />
+      GitHub Pages a veces demora
+      <b>unos segundos a 1 minuto</b>
+      en activarse. Si visitas el enlace y no carga, espera un poco y vuelve a
+      probar.
+      <br />
+    </p>
   </body>
 </html>
